add img and video folders. add fontawesome link rel

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Concert+One&family=Playfair+Display:wght@400;500;700;900&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&display=swap"
             rel="stylesheet">
-            
+
+        <!-- FONT AWESOME -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <title>Hydrofarm</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
