nest div.container-fluid inside the nav and nest the logo img

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
     </head>
 
     <body>
+        <!-- add a sticky-top class later -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="images/hydrofarm-logo(trans).png" alt="Hydrofarm Logo" width="200" height="40">
+                </a>
+                
+            </div>
 
         </nav>
 
