mark start and end of dropdown menu in the nav section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="events.html">Events</a>
                         </li>
+                        <!-- start of dropdown menu -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -53,6 +54,7 @@
                             </a>
                             
                         </li>
+                        <!-- end of dropdown menu -->
                         
 
                         <li class="nav-item">
