--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Partnership
                             </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Our Partners</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Partnership Programs</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Join Our Partnership Program</a></li>
+                            </ul>
+                            <!-- end of dropdown menu -->
                             
                         </li>
                         <!-- end of dropdown menu -->
