--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button> -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent" id="top">
-                    <ul class="navbar-nav mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#top">Home</a>
                         </li>
