--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                             <a class="nav-link" aria-current="page" href="#top">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="faqs.html">FAQs</a>
+                            <a class="nav-link" href="#">FAQs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="events.html">Events</a>
+                            <a class="nav-link" href="#">Events</a>
                         </li>
                         <!-- start of dropdown menu -->
                         <li class="nav-item dropdown">
@@ -70,7 +70,7 @@
                         
 
                         <li class="nav-item">
-                            <a class="nav-link active contact-us" href="contact.html">Contact Us</a>
+                            <a class="nav-link active contact-us" href="#">Contact Us</a>
                         </li>
 
                     </ul>
@@ -80,6 +80,13 @@
             </div>
 
         </nav>
+
+        <header>
+
+            <!-- Blank container for CSS manipulation-->
+            <div class="montage-overlay"></div>
+      
+          </header>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
