--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
                 <source src="videos/hydroponics-montage.mp4" type="video/mp4">
             </video>
 
+            <!-- The header content -->
+            <div class="container h-100">
+                <div class="d-flex h-100 text-center align-items-center">
+                    <div class="w-100 text-white">
+                        <h1 class="fw-bold">Hydrofarm</h1>
+                        <p class="lead mb-0 .fs-4">Enjoy the benefits of sustainable, soil-free farming <br>within the
+                            metro!</p>
+                    </div>
+                </div>
+            </div>
+
 
         </header>
 
