--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button> -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent" id="top">
+                <div class="collapse navbar-collapse" id="navbar-content" id="top">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#top">Home</a>
@@ -48,11 +48,11 @@
                         </li>
                         <!-- start of dropdown menu -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle disabled" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle disabled" href="#" id="navbar-dropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Partnership
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu" aria-labelledby="navbar-dropdown">
                                 <li><a class="dropdown-item" href="#">Our Partners</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
