--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                     </div>
                 </div>
             </div>
-
-
         </header>
+
+        <!-- ABOUT US SECTION -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
