make another div for container

--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
         <!-- ABOUT US SECTION -->
         <main>
             <section class="about-us-section">
+                <div class="container about-us-container">
 
 
+                </div>
             </section>
         </main>
 
