hr for styling and div to hold h2

--- a/index.html
+++ b/index.html
@@ -101,11 +101,15 @@
                 </div>
             </div>
         </header>
-        
+
         <!-- ABOUT US SECTION -->
         <main>
             <section class="about-us-section">
                 <div class="container about-us-container">
+                    <hr class="border-2 border-top border-info">
+                    <div class="sections-heading">
+                        <h2 class="about-us-heading">About <span>Us</span></h2>
+                    </div>
 
 
                 </div>
