--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
                         <h2 class="about-us-heading">About <span>Us</span></h2>
                     </div>
 
+                    <div class="container about-us-text-container">
 
+
+                    </div>
                 </div>
             </section>
         </main>
