add text for the about us section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,32 @@
                     </div>
 
                     <div class="container about-us-text-container">
+                        <div class="container about-us-item">
+                            <p class="about-us-text">
+                                Founded in 2022, Hydrofarm&copy; has been helping traditional farmers, entrepreneurs,
+                                local NGOs, and
+                                hobbyists
+                                to
+                                transition into hydroponics.</p> &nbsp;
 
+                            <p class="about-us-text"> Traditional farming, while important, requires huge capital for
+                                seeds,
+                                fertilizers, labor, and even the
+                                transportation of crops. Not to mention the rising oil prices which spikes up the
+                                capital even more and
+                                all of the carbon footprint that comes in the process. With those limitations, farmers
+                                are having a hard
+                                time balancing food supply as well as livelihood sustainability, moreso, limiting carbon
+                                footprint.
+                                Hydroponics offers a sustainable and more environmental-friendly solution to these
+                                concerns, given that
+                                it
+                                promotes farming within the comfort of your home, even with limited space.
+                                Hydrofarm&copy; aims to make
+                                hydroponics known better and provide assistance to those interested to get into it. What
+                                are you waiting
+                                for? Contact us now!</p>
+                        </div>
 
                     </div>
                 </div>
