transform the text contact us into a clickable link

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 Hydrofarm&copy; aims to make
                                 hydroponics known better and provide assistance to those interested to get into it. What
                                 are you waiting
-                                for? Contact us now!</p>
+                                for? <a class="contact-us about-us-cta" href="#">Contact us</a> now!</p>
                         </div>
 
                     </div>
