--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
                     </div>
                 </div>
             </section>
+
+            <!-- TEAMS SECTION -->
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
