--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
             </section>
 
             <!-- TEAMS SECTION -->
+            <section id="team" class="team-area">
+                <div class="container">
+
+                </div>
+            </section>
+
         </main>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
