add an hr with the same formating as the first one

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             <!-- TEAMS SECTION -->
             <section id="team" class="team-area">
                 <div class="container">
+                    <hr class="border-2 border-top border-success">
 
                 </div>
             </section>
