create two div.team-items

--- a/index.html
+++ b/index.html
@@ -148,12 +148,15 @@
                 <div class="container">
                     <hr class="border-2 border-top border-success">
                     <!-- teams section header -->
-                        <div class="col-md-12">
-                            <div class="sections-heading team-heading text-center">
-                                <h2>Our <span>Team</span></h2>
-                                <h4>Meet our fresh and <span class="organic">organic</span> team members</h4>
-                            </div>
+                    <div class="col-md-12">
+                        <div class="sections-heading team-heading text-center">
+                            <h2>Our <span>Team</span></h2>
+                            <h4>Meet our fresh and <span class="organic">organic</span> team members</h4>
                         </div>
+                    </div>
+
+                    <div class="team-items row"></div>
+                    <div class="team-items row"></div>
 
                 </div>
             </section>
