--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
                         </div>
                     </div>
 
-                    <div class="team-items row"></div>
+                    <div class="team-items row">
+                        <div class="item-container col-md-4"></div>
+                        <div class="item-container col-md-4"></div>
+                        <div class="item-container col-md-4"></div>
+                    </div>
                     <div class="team-items row"></div>
 
                 </div>
