--- a/index.html
+++ b/index.html
@@ -157,7 +157,24 @@
 
                     <div class="team-items row">
                         <div class="item-container col-md-4"></div>
-                        <div class="item-container col-md-4"></div>
+                        <div class="item-container col-md-4">
+                            <div class="item">
+                                <div class="item-content">
+                                  <img class="img-fluid" src="Images/Bezos-primary.png" alt="Bezos-img">
+                                  <div class="team-overlay">
+                                    <p><em>“If we can keep our competitors focused on us while we stay focused on the customer,
+                                        ultimately we'll turn out all right.”</em></p>
+                                    <div class="alt-image-container">
+                                      <img src="Images/Bezos-alt.png" alt="bezos-alt-img" class="alt-image">
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="info">
+                                  <h4>Jeff</h4>
+                                  <span>Founder and CEO</span>
+                                </div>
+                              </div>
+                        </div>
                         <div class="item-container col-md-4"></div>
                     </div>
                     <div class="team-items row"></div>
