manipulate position of alt image and text to be hidden by default

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                   <div class="team-overlay">
                                     <p><em>“If we can keep our competitors focused on us while we stay focused on the customer,
                                         ultimately we'll turn out all right.”</em></p>
-                                    <div class="alt-image-container">
+                                    <div class="alt-image-container img-fluid">
                                       <img src="Images/Bezos-alt.png" alt="bezos-alt-img" class="alt-image">
                                     </div>
                                   </div>
