add h6 class to alt text. apply hover effect on alt image and text

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                                 <div class="item-content">
                                   <img class="img-fluid" src="Images/Bezos-primary.png" alt="Bezos-img">
                                   <div class="team-overlay">
-                                    <p><em>“If we can keep our competitors focused on us while we stay focused on the customer,
+                                    <p class="h6"><em>“If we can keep our competitors focused on us while we stay focused on the customer,
                                         ultimately we'll turn out all right.”</em></p>
-                                    <div class="alt-image-container img-fluid">
-                                      <img src="Images/Bezos-alt.png" alt="bezos-alt-img" class="alt-image">
+                                    <div class="alt-image-container">
+                                      <img class="img-fluid" src="Images/Bezos-alt.png" alt="bezos-alt-img" class="alt-image">
                                     </div>
                                   </div>
                                 </div>
