comment row number of team members

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                         </div>
                     </div>
 
+                    <!-- first row -->
                     <div class="team-items row">
                         <div class="item-container col-md-4"></div>
                         <div class="item-container col-md-4">
@@ -177,6 +178,8 @@
                         </div>
                         <div class="item-container col-md-4"></div>
                     </div>
+
+                    <!-- second row -->
                     <div class="team-items row"></div>
 
                 </div>
