add second row team members

--- a/index.html
+++ b/index.html
@@ -180,7 +180,62 @@
                     </div>
 
                     <!-- second row -->
-                    <div class="team-items row"></div>
+                    <div class="team-items row">
+                        <div class="col-md-4 item-container">
+                            <div class="item">
+                              <div class="item-content">
+                                <img class="img-fluid" src="Images/Beast-primary.png" alt="Mr.Beast-img">
+                                <div class="team-overlay">
+                                  <p class="h6"><em>“My overarching goal in life is to make a lot of money and then before I die, give it
+                                      away.”</em></p>
+                                  <div class="alt-image-container">
+                                    <img class="img-fluid" src="Images/Beast-alt.png" alt="beast-alt-img" class="alt-image">
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="info">
+                                <h4>Jimmy</h4>
+                                <span>Chief Content Officer / Brand Ambassador</span>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-4 item-container">
+                            <div class="item">
+                              <div class="item-content">
+                                <img class="img-fluid" src="Images/Gates-primary.png" alt="Gates-img">
+                                <div class="team-overlay">
+                                  <p class="h6"><em>“Your most unhappy customers are your greatest source of learning.”</em>></p>
+                                  <div class="bio">
+                                    <img class="img-fluid" src="Images/Gates-alt.png" alt="gates-alt-img" class="alt-image">
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="info">
+                                <h4>Bill</h4>
+                                <span>Chief Financial Officer</span>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-4 item-container">
+                            <div class="item">
+                              <div class="item-content">
+                                <img class="img-fluid" src="Images/Zuckerberg-primary.png" alt="Zuckerberg-img">
+                                <div class="team-overlay">
+                                  <p class="h6"><em>“Ideas don't come out fully formed , they only become clearer as you work on them"</em>
+                                    <!-- <span>My interest in hydroponics started in Farmville.</span> -->
+                                  </p>
+                                  <div class="bio">
+                                    <img class="img-fluid" src="Images/Zuckerberg-alt.png" alt="Zuckerberg-alt-img" class="alt-image">
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="info">
+                                <h4>Mark</h4>
+                                <span>Chief Technology officer</span>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
 
                 </div>
             </section>
