create two divs

--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="container carousel-container">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        
+                    </div>
+                  </div>
             </section>
 
         </main>
