--- a/index.html
+++ b/index.html
@@ -326,7 +326,16 @@
                   </div>
             </section>
 
+            <div class="push"></div>
+
         </main>
+
+        <footer>
+            <div class="container-fluid text-center">
+              <p>KodeGo Individual Project by Francis Ventura.&copy; 2022</p>
+      
+            </div>
+          </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
