make a section and div.container

--- a/faq.html
+++ b/faq.html
@@ -82,8 +82,14 @@
         </nav>
 
         <main>
-            <div class="push"></div>
+            <section>
 
+            </section>
+            <div class="faq-section container">
+                
+            </div>
+
+            <div class="push"></div>
         </main>
 
         <footer>
