--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,10 @@
 
             </section>
             <div class="faq-section container">
-                
+                <div class="sections-heading">
+                    <h2>FA<span>Q</span><span class="span-small">s</span> </h2>
+                    <h5>Got some questions? </h5>
+                </div>
             </div>
 
             <div class="push"></div>
