nest a div.faq-heading-container that will nest the previous div.section-heading and a new div.text

--- a/faq.html
+++ b/faq.html
@@ -86,9 +86,17 @@
 
             </section>
             <div class="faq-section container">
-                <div class="sections-heading">
-                    <h2>FA<span>Q</span><span class="span-small">s</span> </h2>
-                    <h5>Got some questions? </h5>
+                <div class="faq-heading-container">
+                    <div class="sections-heading">
+                        <h2>FA<span>Q</span><span class="span-small">s</span> </h2>
+                        <h5>Got some questions? </h5>
+                    </div>
+
+                    <div class="text">
+                        <p>We gathered the most common questions in our inbox to give you an idea on the things that
+                            you
+                            need to consider in setting up your own hydroponics system.</p>
+                    </div>
                 </div>
             </div>
 
