inside the div.section-container, create two divs

--- a/faq.html
+++ b/faq.html
@@ -98,6 +98,12 @@
                             need to consider in setting up your own hydroponics system.</p>
                     </div>
                 </div>
+
+                <div class="collapse-containercontainer row">
+                    <div class="col-lg-4 text-start" id="parent-btn">
+
+                    </div>
+                </div>
             </div>
 
             <div class="push"></div>
