mark the parts of the collapse and expanded accordions

--- a/faq.html
+++ b/faq.html
@@ -99,6 +99,7 @@
                     </div>
                 </div>
 
+                <!-- Accordion collapse -->
                 <div class="collapse-containercontainer row">
                     <div class="col-lg-4 text-start" id="parent-btn">
                         <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
@@ -130,6 +131,11 @@
                                 data-parent="#parent-btn">Common myths about
                                 hydroponics:
                             </button>
+                    </div>
+
+                    <!-- accordion expanded -->
+                    <div class="col-lg-8">
+
                     </div>
                 </div>
             </div>
