add expanded text for collapse-definition

--- a/faq.html
+++ b/faq.html
@@ -135,6 +135,12 @@
 
                     <!-- accordion expanded -->
                     <div class="col-lg-8">
+                        <div class="collapse" id="collapse-definition">
+                            <div class="card card-body">
+                                Hydroponics is the method of growing plants in nutrient solutions (with or
+                                without an inert medium such as soil) to provide mechanical support.
+                            </div>
+                        </div>
 
                     </div>
                 </div>
