on the same section, create another div

--- a/events.html
+++ b/events.html
@@ -90,6 +90,10 @@
                     </div>
                 </div>
 
+                <div class="events-section container">
+                    
+                </div>
+
             </section>
 
 
